WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269078
[WGSL] Validate that resources do not collide
https://bugs.webkit.org/show_bug.cgi?id=269078
Summary
[WGSL] Validate that resources do not collide
Tadeu Zagallo
Reported
2024-02-09 10:18:47 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-09 10:19:01 PST
<
rdar://problem/122652489
>
Tadeu Zagallo
Comment 2
2024-02-09 10:21:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24156
EWS
Comment 3
2024-02-12 08:29:17 PST
Committed
274459@main
(56239356040f): <
https://commits.webkit.org/274459@main
> Reviewed commits have been landed. Closing PR #24156 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug