[WGSL] Validate that resources do not collide https://bugs.webkit.org/show_bug.cgi?id=269078 rdar://122652489

Reviewed by Mike Wyrzykowski.

The goal was to fix shader,validation,decl,var:binding_collisions:*, but in order
to pass that test this validation needs to during during shader creation time, while
we current run it at pipeline creation time. However, moving the validation requires
a significantly larger change, which will happen later, but this seemed like a
worthwhile validation to have in the meantime.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::visitEntryPoint):
(WGSL::RewriteGlobalVariables::determineUsedGlobals):

Canonical link: https://commits.webkit.org/274459@main